--- a/public/index.html
+++ b/public/index.html
@@ -87,18 +87,7 @@
 </ul>
 </script>
 
+<script type="text/javascript" data-main="/js/main"  src="js/vendor/require.js"></script>
 
-<script type="text/javascript"  src="js/vendor/knockout-2.3.0.js"></script>
-<script type="text/javascript"  src="js/vendor/jquery.js"></script>
-<script type="text/javascript"  src="bootstrap/js/bootstrap.js"></script>
-<script type="text/javascript"  src="js/libs/knockout.localStorage.js"></script>
-<script type="text/javascript"  src="js/libs/bus.js"></script>
-<script type="text/javascript"  src="js/libs/REST.js"></script>
-
-<script type="text/javascript" src="js/app/Pager.js"></script>
-<script type="text/javascript" src="js/app/NavBar.js"></script>
-<script type="text/javascript" src="js/app/CategoryList.js"></script>
-<script type="text/javascript" src="js/app/CategoryEdit.js"></script>
-<script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
