--- a/public/index.html
+++ b/public/index.html
@@ -8,97 +8,14 @@
 <body>
 
 <!-- ko with : popup -->
-		<!-- ko template : { name : template } -->
+		<!-- ko template : { html : template } -->
 		<!-- /ko -->
 <!-- /ko -->
 
 <div class="container" data-bind="with : content">
-		<!-- ko template : { name : template } -->
-		<!-- /ko -->
-</div>
-
-
-<script type="text/template" id="categories-list">
-	<div class="row">
-	<!-- ko with : breadcrumb -->
-		<!-- ko template : { name : template } -->
-		<!-- /ko -->
+	<!-- ko template : { html : template } -->
 	<!-- /ko -->
-      	<a data-bind="click : add" href="#" class="btn">new</a>        
-		<div class="span12">
-			<table class="table">
-              <thead>
-                <tr>
-                  <th></th>
-                  <th>Category</th>
-                  <th></th>
-                  <th></th>
-                </tr>
-              </thead>
-              <tbody data-bind="foreach : items">
-                <tr data-bind="css : { info : id == $parent.categoryId() } ">
-                	<td>
-            	 	<a data-bind="click : $parent.upClick" href="" class="btn btn-mini"><i class="icon-chevron-up"></i></a>
-                  	<a data-bind="click : $parent.downClick" href="" class="btn btn-mini"><i class="icon-chevron-down"></i></a>              	
-                 	</td>
-                  <td >
-                  	<a data-bind="text : title, click : $parent.moveToChild" href=""></a>
-                  </td>
-                  <td data-bind="text : range">
-                  </td>
-                  <td>
-                  	<a data-bind="click : $parent.remove" href="#" class="btn ">delete</a>
-                  	<a data-bind="click : $parent.edit" href="#" class="btn ">edit</a>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-		</div>
-	</div>
-	<!-- ko with : pager -->
-		<!-- ko template : { name : template } -->
-		<!-- /ko -->
-	<!-- /ko -->
-
-</script>
-
-<script type="text/template" id="edit-form">
-<div id="edit-form" class="modal hide fade" >
-  <div class="modal-header">
-    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-    <h3 data-bind="text : formTitle">Modal header</h3>
-  </div>
-  <div class="modal-body">
-    <p>Title</p>
-    <input data-bind="value : title" />
-  </div>
-  <div class="modal-footer">
-    <a data-bind="click : save" href="#" class="btn btn-primary">Save changes</a>
-  </div>
 </div>
-</script>
-
-
-<script type="text/template" id="pager-template">
-<ul class="pager">
-  <li data-bind="css : { disabled : canNotPrev() }"><a href="#" data-bind="click : prevClick">Previous</a></li>
-  <li data-bind="text : text"></li>
-  <li data-bind="css : { disabled : canNotNext() }"><a href="#" data-bind="click : nextClick">Next</a></li>
-</ul>
-</script>
-
-<script type="text/template" id="navbar-template">
-<ul class="breadcrumb" data-bind="foreach : breadcrumb">
-
-  	<li data-bind="if: (($index()+1) != $parent.breadcrumb().length)">
-  		<a href="#" data-bind="text : name, click : $parent.navClick"></a> 
-  		<span class="divider">/</span>
-  	</li>
-  	<li class="active" data-bind="if:(($index()+1) == $parent.breadcrumb().length)">
-  		<!--ko text : name --><!-- /ko -->
-  	</li>
-</ul>
-</script>
 
 <script type="text/javascript" data-main="/js/main"  src="js/vendor/require.js"></script>
 
